WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265518
[CSS] Don't construct CSSSelectorList when not needed
https://bugs.webkit.org/show_bug.cgi?id=265518
Summary
[CSS] Don't construct CSSSelectorList when not needed
Matthieu Dubet
Reported
2023-11-29 06:54:44 PST
CSSSelectorList is an optimized data structure which takes some time to construct. We should doing it too early or when it's unnecessary.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-29 06:54:58 PST
<
rdar://problem/118931010
>
Matthieu Dubet
Comment 2
2023-11-29 07:41:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21052
EWS
Comment 3
2023-11-29 11:02:55 PST
Committed
271290@main
(3ff376ea3d2a): <
https://commits.webkit.org/271290@main
> Reviewed commits have been landed. Closing PR #21052 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug